--- a/css/style3.css
+++ b/css/style3.css
@@ -1,9 +1,16 @@
+html body {
+  background-color: #f7f7f7;
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+h1 {
+  text-align: center;
+  padding-bottom: 30px;
+}
 .navbar {
   padding: 25px 0;
 }
@@ -79,10 +86,16 @@
   height: auto;
   color: #fff;
   width: 100%;
+  font-family: "Times";
   z-index: 1;
+  word-spacing: 30px;
   text-align: center;
   font-size: 5.5em;
   font-weight: 750;
+}
+
+.letterS {
+  letter-spacing: 10px;
 }
 #carouselExampleIndicators .carousel-inner .carousel-item p {
   height: auto;
@@ -169,4 +182,57 @@
 
 .width-i {
   width: 500px;
+}
+
+.users-feedback {
+  padding: 100px 0;
+}
+
+.user-review {
+  text-align: center;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 100, 0.2);
+  padding-bottom: 50px;
+}
+
+.user-review p {
+  padding: 50px 10px 10px 10px;
+}
+
+.users-feedback img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  position: relative;
+  margin: -30px 0 20px 40%;
+}
+.user-review p::before {
+  content: "\201d";
+  display: block;
+  position: absolute;
+  font-size: 100px;
+  color: #6495ed;
+  font-family: sans-serif;
+  left: 44%;
+  top: -20px;
+}
+
+.information {
+  box-shadow: 0 0 10px 0 rgba(0, 0, 100, 0.2);
+  text-align: left;
+}
+
+.itinerari {
+  padding: 100px 0;
+}
+
+.itinerari-review {
+  text-align: center;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 100, 0.2);
+}
+
+.itinerari-review .card .card-body {
+  text-align: left;
+}
+.width-iti {
+  width: 300px;
 }
