--- a/views/logged.ejs
+++ b/views/logged.ejs
@@ -54,7 +54,7 @@
             href="/"
             class="logo navbar-brand text-white offset-md-2"
             style="margin-left: 50px"
-            >Logo</a
+            >VIROM</a
           >
           <button
             class="navbar-toggler"
@@ -186,75 +186,49 @@
           <div class="carousel-inner w-100" role="listbox">
             <div class="carousel-item active">
               <div class="col-md-4">
-                <div class="card">
-                  <a href="/Fororomano">
-                    <img class="img-fluid width-i" src="image/ForoRomano.png"
-                  /></a>
-                  <div class="card-B card-body">
-                    <p>il Foro Romano</p>
-                  </div>
+                <div class="monu-img">
+                  <img  class="img-fluid width-i" src="image/ForoRomano.png" alt="">
+                  <a href="/Fororomano"><button type="button" class="btn-monu"><strong>Foro Romano</strong></button></a>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
               <div class="col-md-4">
-                <div class="card">
-                  <a href="Piazzaspagna">
-                    <img class="img-fluid width-i" src="image/Spagna.png"
-                  /></a>
-                  <div class="card-B card-body">
-                    <p>Piazza di Spagna</p>
-                  </div>
+                <div class="monu-img">
+                  <img  class="img-fluid width-i" src="image/Spagna.png" alt="">
+                  <a href="/Piazzaspagna"><button type="button" class="btn-monu"><strong>Piazza Spagna</strong></button></a>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
               <div class="col-md-4">
-                <div class="card">
-                  <a href="/Fontana">
-                    <img class="img-fluid width-i" src="image/Fontana.png"
-                  /></a>
-                  <div class="card-B card-body">
-                    <p>la Fontana di Trevi</p>
-                  </div>
+                <div class="monu-img">
+                  <img  class="img-fluid width-i" src="image/Fontana.png" alt="">
+                  <a href="/Fontana"><button type="button" class="btn-monu"><strong>Fontana Trevi</strong></button></a>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
               <div class="col-md-4">
-                <div class="card">
-                  <a href="/Pantheon">
-                    <img class="img-fluid width-i" src="image/Pantheon.png"
-                  /></a>
-                  <div class="card-B card-body">
-                    <p>il Pantheon</p>
-                  </div>
+                <div class="monu-img">
+                  <img  class="img-fluid width-i" src="image/Pantheon.png" alt="">
+                  <a href="/Pantheon"><button type="button" class="btn-monu"><strong>Pantheon</strong></button></a>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
               <div class="col-md-4">
-                <div class="card">
-                  <a href="/colosseo">
-                    <img class="img-fluid width-i" src="image/colosseo.png"
-                  /></a>
-                  <div class="card-B card-body">
-                    <p>il Colosseo</p>
-                  </div>
+                <div class="monu-img">
+                  <img  class="img-fluid width-i" src="image/colosseo.png" alt="">
+                  <a href="/Colosseo"><button type="button" class="btn-monu"><strong>Colosseo</strong></button></a>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
               <div class="col-md-4">
-                <div class="card">
-                  <a href="/Piazzavenezia">
-                    <img
-                      class="img-fluid width-i"
-                      src="image/piazzavenezia.png"
-                  /></a>
-                  <div class="card-B card-body">
-                    <p>Piazza Venezia</p>
-                  </div>
+                <div class="monu-img">
+                  <img  class="img-fluid width-i" src="image/piazzavenezia.png" alt="">
+                  <a href="/Piazzavenezia"><button type="button" class="btn-monu"><strong>Piazza Venezia</strong></button></a>
                 </div>
               </div>
             </div>
