--- a/views/logged_about.ejs
+++ b/views/logged_about.ejs
@@ -56,7 +56,7 @@
             href="/"
             class="logo navbar-brand text-white offset-md-2"
             style="margin-left: 50px"
-            >Logo</a
+            >VIROM</a
           >
           <button
             class="navbar-toggler"
@@ -118,7 +118,10 @@
         <div class="row">
           <div class="col-md-12">
             <h1 class="lg-text">About Us</h1>
-            <p class="image-aboutus-para">
+            <p
+              class="image-aboutus-para"
+              style="text-align: center; font-size: 1.2rem"
+            >
               Look down below for a quick description about the site and the
               members of our team.
             </p>
@@ -130,22 +133,23 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h1 class="strong">Who we are and<br />what we do?</h1>
-            <p class="lead">
-              This is the world's leading portal for<br />easy and quick
-            </p>
+            <h1 class="strong" style="text-align: left">
+              Who we are and<br />what we do?
+            </h1>
+            <p class="lead">The site is made with love❤️</p>
           </div>
           <div class="col-md-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
-              convallis egestas rhoncus. Donec facilisis fermentum sem, ac
-              viverra ante luctus vel. Donec vel mauris quam.
+              Questo sito è nato con l’idea di presentare Roma al meglio e
+              facilitare ai turisti e viaggiatori la loro visita, invece per
+              quelli di Roma offre una visione nuova sui luoghi in cui passa
+              tutti i giorni.
             </p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
-              convallis egestas rhoncus. Donec facilisis fermentum sem, ac
-              viverra ante luctus vel. Donec vel mauris quam. Lorem ipsum dolor
-              sit amet. Nulla convallis egestas rhoncus.
+              Proponiamo gli itinerari fantastici a te dedicate per scoprire la
+              meraviglia di Roma. Ti faremo da guida per regalarti emozioni
+              uniche e indimenticabili. Puoi scoprire i luoghi imperdibili e
+              avere le loro informazioni tramite noi.
             </p>
           </div>
         </div>
@@ -170,18 +174,17 @@
               <h3>Weidong Cai</h3>
               <div class="border-team"></div>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
-                convallis egestas rhoncus. Donec facilisis fermentum sem, ac
-                viverra ante luctus vel. Donec vel mauris quam.
+                Computer Science Student💻,General Travel Enthusiast🕊️,Amateur
+                BasketBall Player🏀,Amateur Photographer📷.
               </p>
               <div class="social-icons">
-                <a href="https://www.facebook.com/"
+                <a href="https://www.facebook.com/weidong.cai/"
                   ><i
                     id="social-fb"
                     class="fa fa-facebook-square fa-3x social"
                   ></i
                 ></a>
-                <a href="https://twitter.com/"
+                <a href="https://www.instagram.com/weidongcai/"
                   ><i
                     id="social-ins"
                     class="fab fa-instagram-square fa-3x social"
@@ -202,18 +205,17 @@
               <h3>Elena Jiang</h3>
               <div class="border-team"></div>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
-                convallis egestas rhoncus. Donec facilisis fermentum sem, ac
-                viverra ante luctus vel. Donec vel mauris quam.
+                Computer Science Student💻,General Travel
+                Enthusiast🕊️,Professional Eater🍝,Trash Photographer📷.
               </p>
               <div class="social-icons">
-                <a href="https://www.facebook.com/"
+                <a href="https://www.facebook.com/usuisuochiruo"
                   ><i
                     id="social-fb"
                     class="fa fa-facebook-square fa-3x social"
                   ></i
                 ></a>
-                <a href="https://twitter.com/"
+                <a href="https://www.instagram.com/elena_jyf/"
                   ><i
                     id="social-ins"
                     class="fab fa-instagram-square fa-3x social"
