--- a/pubblic/css/style.css
+++ b/pubblic/css/style.css
@@ -10,6 +10,19 @@ body {
   color: #4a5568;
 }
 
+:root{
+  --primary-color:#f7f7f7;
+  --content-color:white;
+  --secondary-color:black;
+  --h1-color:#4a5568;
+}
+.dark-theme{
+  --primary-color:black;
+  --content-color:black;
+  --secondary-color:white;
+  --h1-color:white;
+}
+
 .timeline {
   position: relative;
   max-width: 1200px; /* Restrict the width on large screens */
@@ -47,7 +60,8 @@ body {
 }
 .content {
   padding: 30px;
-  background-color: white;
+  background-color:var(--content-color);
+  color:var(--secondary-color);
   position: relative;
   border-radius: 6px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
@@ -135,6 +149,8 @@ body {
     border-color: transparent white transparent transparent;
   }
 }
+
+/* on screens that are 480px wide or less */
 @media screen and (max-width: 480px) {
   .container {
     padding-left: 0px;
@@ -152,4 +168,16 @@ body {
 
 .tt {
   z-index: 9999;
+}
+
+.container-fluid{
+  font-family: "Segoe UI","Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+}
+
+html body{
+  background:var(--primary-color);
+}
+
+h1{
+  color: var(--h1-color);
 }
