--- a/views/logged_iti_48ore.ejs
+++ b/views/logged_iti_48ore.ejs
@@ -55,7 +55,7 @@
             href="/"
             class="logo navbar-brand text-white offset-md-2"
             style="margin-left: 50px"
-            >Logo</a
+            >VIROM</a
           >
           <button
             class="navbar-toggler"
@@ -106,6 +106,9 @@
                     </div>
                   </div>
                 </div>
+              </li>
+              <li class="nav-item">
+                <img src="/image/Sun.png" id="icon" style="width: 25px;margin-left: 7px;margin-top: 6px;" alt="">
               </li>
             </ul>
           </div>
@@ -253,4 +256,5 @@
     </footer>
   </body>
   <script src="/js/openmodal.js" charset="utf-8"></script>
+  <script src="/js/darkmode.js" charset="utf-8"></script>
 </html>
