--- a/views/monumenti_logged.ejs
+++ b/views/monumenti_logged.ejs
@@ -21,6 +21,8 @@
 
     <!-- css for monu -->
     <link rel="stylesheet" type="text/css" href="css/styleMonu.css" />
+    <!-- css per comments -->
+    <link rel="stylesheet" type="text/css" href="css/comment.css">
     <!-- font-awesome -->
     <script
       src="https://kit.fontawesome.com/7091884191.js"
@@ -56,7 +58,7 @@
             href="/"
             class="logo navbar-brand text-white offset-md-2"
             style="margin-left: 50px"
-            >Logo</a
+            >VIROM</a
           >
           <button
             class="navbar-toggler"
@@ -176,6 +178,35 @@
         </div>
       </div>
     </div>
+    <div class="container">
+<div class="be-comment-block">
+    <h1 class="comments-title">Comments</h1>
+    <div class="be-comment">
+      <%usersWithComments.forEach(function(comments){ %>
+        <div class="be-img-comment">
+            <a href="blog-detail-2.html">
+                <img src="image/User_Avatar_2.png" alt="" class="be-ava-comment">
+            </a>
+        </div>
+        <div class="be-comment-content">
+              <span class="be-comment-name">
+                <p><%=comments.user%></p></span>
+              <p class="be-comment-text"><%=comments.commenti%></p>
+        </div>
+         <%   })   %>
+    </div>
+    <form action="/:monuName" method="POST" class="form-block">
+        <div class="row">
+            <div class="col-md-12" style="padding-left:0px;padding-right:0px">
+                <div class="form-group">
+                    <textarea class="form-input" name="comment"  placeholder="Your Comment"></textarea>
+                </div>
+            </div>
+      <button class="btn btn-dark" name="Monu" value="<%=monuN%>" type="submit">submit</button>
+    </div>
+    </form>
+</div>
+</div>
     <footer class="w-section" id="footer">
       <i class="fab fa-twitter download-class2"></i>
       <i class="fab fa-facebook-f download-class2"></i>
